# source_read

./: .gitignore
Caffe_CycleGAN-master/src/: main.cpp
ClassyVision-master/classy_vision/dataset/: classy_imagenet.py
ClassyVision-master/classy_vision/dataset/transforms/: util.py
ClassyVision-master/classy_vision/generic/: registry_utils.py  util.py
ClassyVision-master/classy_vision/hooks/: checkpoint_hook.py  classy_hook.py
ClassyVision-master/classy_vision/losses/: __init__.py  triplet_loss.py
ClassyVision-master/classy_vision/models/: classy_block.py  classy_model.py  classy_model_wrapper.py  resnext.py
ClassyVision-master/classy_vision/tasks/: __init__.py  classification_task.py
ClassyVision-master/test/: tasks_fine_tuning_task_test.py
HeadPosePnP-master/: CMakeLists.txt  HeadPose.cpp  OGL_OCV_common.cpp  OGL_OCV_common.h  RenderEngine.cpp  RenderEngine.h  RenderManager.cpp  RenderManager.h  WindowsRenderResourceManager.cpp  WindowsRenderResourceManager.h  glm.cpp  glm.h  head_pose_freeglut_one_loop.cpp  headpose_with_offline_render.cpp  main_offline_render.cpp  reorganize_headpose_code.cpp  test_fbo.cpp  test_myself.cpp
HeadPosePnP-master/Angelina_Jolie/: Angelina_Jolie_0001.txt  Angelina_Jolie_0002.txt  Angelina_Jolie_0003.txt  Angelina_Jolie_0004.txt  Angelina_Jolie_0005.txt  Angelina_Jolie_0006.txt  Angelina_Jolie_0007.txt  Angelina_Jolie_0008.txt  Angelina_Jolie_0009.txt  Angelina_Jolie_0010.txt  Angelina_Jolie_0011.txt  Angelina_Jolie_0012.txt  Angelina_Jolie_0013.txt  Angelina_Jolie_0014.txt  Angelina_Jolie_0015.txt  Angelina_Jolie_0016.txt  Angelina_Jolie_0017.txt  Angelina_Jolie_0018.txt  Angelina_Jolie_0019.txt  Angelina_Jolie_0020.txt
HeadPosePnP-master/include_3rd/caffe/: include_symbols.hpp
HeadPosePnP-master/include_3rd/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
HeadPosePnP-master/lib/: gflags.lib  hdf5.lib  hdf5_hl.lib  libglog.lib  lmdb.lib  proto.lib  szip.lib  zlib.lib
HeadPosePnP-master/resource/: resource.txt
Realtime_Multi-Person_Pose_Estimation-master/training/: genCOCOMask.m  genLMDB.py  getANNO.m  setLayers.py
StructuredFeature-master/: Data_prepare.m  globals.m
StructuredFeature-master/caffe-multi/tools/: convert_leveldb_to_lmdb.cpp
StructuredFeature-master/code/: LSP_data_fconv.m  LSP_def_idx.m  LabelMapGen_strict.m  MixGen_lsp.m  clusterparts_yy.m  concat_pos_neg_lsp.m  data_def_lsp.m  data_shuffle.m  fconv_data_lsp.m  global_conf.m  imtrans_lsp.m  joints2labelmap_lsp_stricter.m  label_distmap.m  lmdb_fconv_data_lsp.m  lsp_conf.m  map_cirle_fill.m
StructuredFeature-master/dataio/: add_flip.m  imreadx.m
StructuredFeature-master/protofiles/: train_val.prototxt
StructuredFeature-master/tools/: parload.m  parsave.m  showskeletons_vis.m
android/app/: build.gradle  download_model.gradle
android/app/src/main/: AndroidManifest.xml
caffe-master/: CMakeLists.txt
caffe-master/cmake/: Dependencies.cmake  Misc.cmake  Summary.cmake  Targets.cmake  Utils.cmake
caffe-master/include/caffe/: blob.hpp  layer.hpp  layer_factory.hpp
caffe-master/src/caffe/layers/: euclidean_loss_layer.cpp  mvn_layer.cpp  slice_layer.cpp
caffe-master/src/caffe/util/: io.cpp
caffe_opencl/include/caffe/layers/: concat_yolo_layer.hpp  fast_rcnn_layers.hpp  upsample_layer.hpp  yolo_v3_loss_layer.hpp
caffe_opencl/scripts/: build_win_vs2013_32.cmd
caffe_opencl/src/caffe/: device.cpp
caffe_opencl/src/caffe/greentea/: cl_kernels.cpp  cl_kernels_bk.cpp
caffe_opencl/src/caffe/layers/: base_conv_layer.cpp  concat_yolo_layer.cpp  concat_yolo_layer.cu  conv_layer.cpp  dropout_layer.cpp  (+10 more)
caffe_opencl/tools/face/: facePredictor.cpp
caffe_opencl/tools/sdk/: face_sdk_implement.cpp  face_sdk_implement.h  face_sdk_interface.cpp  face_sdk_interface.h  head.h  test_face_sdk.cpp
caffe_opencl/tools/texture_mapping/: BaseTextureMap.cpp  BaseTextureMap.h  EarTextureMap.cpp  EarTextureMap.h  EyeBrowTextureMap.cpp  EyeBrowTextureMap.h  EyeTextureMap.cpp  EyeTextureMap.h  MouseTextureMap.cpp  MouseTextureMap.h  NouseTextureMap.cpp  NouseTextureMap.h  triangle_mapping_tools.cpp  triangle_mapping_tools.h
caffe_train-master/src/caffe/: cpm_data_transformer.cpp  data_transformer.cpp
darknet-master/include/: darknet.h
darknet-master/scripts/: voc_label.py
darknet-master/src/: blas.c  box.c  data.c  demo.c  image.c  parser.c  route_layer.c  shortcut_layer.c  upsample_layer.c  yolo_layer.c
detectron2/docs/: requirements.txt
head-pose-estimation-master/: video_test_shape.cpp
live-camera-master/: start.php  start_worker.php
live-camera-master/Web/: index.html
mmcv-master/mmcv/runner/: checkpoint.py
mmcv-master/mmcv/utils/: config.py
mmdetection-master/: setup.py
mmdetection-master/mmdet/apis/: inference.py
mmdetection-master/mmdet/datasets/: registry.py  xml_style.py
mmdetection-master/mmdet/models/: builder.py  registry.py
mmdetection-master/mmdet/utils/: profiling.py  registry.py
mmdetection-master/tools/: train.py
moco/: main_lincls.py  main_moco.py
moco/detection/: train_net.py
moco/moco/: builder.py  loader.py
moco/moco.tensorflow-master/: data.py  main_lincls.py  main_moco.py  resnet.py  serve-data.py
models-master/research/object_detection/: export_tflite_ssd_graph.py  export_tflite_ssd_graph_lib.py  exporter.py  model_lib.py  model_main.py  代码阅读进度.md
openpose-master/examples/: CMakeLists.txt
openpose-master/examples/openpose/: openpose.cpp
openpose-master/python/openpose/: CMakeLists.txt  _openpose.cpp  openpose.py
pytorch-CycleGAN-and-pix2pix/data/: unaligned_dataset.py
pytorch-CycleGAN-and-pix2pix/models/: networks.py  pix2pix_model.py
simclr/: requirements.txt
(+64 files in other folders)
